--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
-blacksheep[full]~=2.0.0
-uvicorn==0.22.0
-uvloop; platform_system != "Windows"
-pydantic-settings
+annotated-types==0.6.0
+blacksheep==2.0.7
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.1.0
+click==8.1.7
+colorama==0.4.6
+cryptography==41.0.7
+essentials==1.1.5
+essentials-openapi==1.0.9
+greenlet==3.0.3
+guardpost==1.0.2
+h11==0.14.0
+httptools==0.6.1
+itsdangerous==2.1.2
 MarkupSafe==2.1.3
+pycparser==2.21
 pydantic==2.5.2
+pydantic-settings==2.2.1
+pydantic_core==2.14.5
+PyJWT==2.6.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+PyYAML==6.0.1
+rodi==2.0.6
+six==1.16.0
+SQLAlchemy==2.0.28
+sqlmodel==0.0.16
+typing_extensions==4.10.0
+uvicorn==0.22.0
+websockets==10.4
