--- a/alembic.ini
+++ b/alembic.ini
@@ -59,7 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres123@localhost/FinanceApplication
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres123@localhost/Finance_API
 
 
 [post_write_hooks]
