--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.6.0
+asyncpg==0.29.0
 blacksheep==2.0.7
 certifi==2024.2.2
 cffi==1.16.0
@@ -20,6 +21,7 @@ pydantic-settings==2.2.1
 pydantic_core==2.14.5
 PyJWT==2.6.0
 python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==1.0.1
 PyYAML==6.0.1
 rodi==2.0.6
