--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ wheels/
 *.egg
 MANIFEST
 alembic.ini
+migrations
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
