--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ wheels/
 *.egg
 MANIFEST
 alembic.ini
-migrations
+migrations/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
