--- a/alembic.ini
+++ b/alembic.ini
@@ -60,6 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 
 
 sqlalchemy.url = postgresql+asyncpg://postgres:postgres123@localhost/Finance_API
+# sqlalchemy.url = %(DATABASE_URL)s
 
 
 [post_write_hooks]
