--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,30 @@
+alembic==1.13.1
 annotated-types==0.6.0
 asyncpg==0.29.0
+base58==2.1.1
+bitcoin-utils-fork-minimal==0.4.11.6
 blacksheep==2.0.7
+block-io==2.0.6
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.1.0
 click==8.1.7
 colorama==0.4.6
 cryptography==41.0.7
+ecdsa==0.18.0
 essentials==1.1.5
 essentials-openapi==1.0.9
 greenlet==3.0.3
 guardpost==1.0.2
 h11==0.14.0
 httptools==0.6.1
+idna==3.7
 itsdangerous==2.1.2
+Mako==1.3.3
 MarkupSafe==2.1.3
+mpmath==1.3.0
 pycparser==2.21
+pycryptodome==3.20.0
 pydantic==2.5.2
 pydantic-settings==2.2.1
 pydantic_core==2.14.5
@@ -24,10 +33,14 @@ python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.1
 PyYAML==6.0.1
+requests==2.31.0
 rodi==2.0.6
+setuptools==69.5.1
 six==1.16.0
 SQLAlchemy==2.0.28
 sqlmodel==0.0.16
+sympy==1.12
 typing_extensions==4.10.0
+urllib3==2.2.1
 uvicorn==0.22.0
 websockets==10.4
