--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,17 @@ __pycache__/
 # C extensions
 *.so
 
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+migrations.__pycache__/
+.pyc
+
 # Distribution / packaging
 .Python
 build/
