--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost/Finance_API
+
+E-MAIL_HOST=smtppro.zoho.com
+E-MAIL_PORT=465
+E-MAIL_USERNAME=uashish@itio.in
+E-MAIL_PASSWORD=aT1FbeW0KvJh
+RESET_TOKEN_SECRET_KEY=8f3d5b9b-a2c4-4b0c-9a9f-f4d0e3b5c6d7
