--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://postgres:root@localhost:5433/fin_api
+DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost:5432/Finance_API
 
 E-MAIL_HOST=smtppro.zoho.com
 E-MAIL_PORT=465
