--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost:5432/Finance_API
 
 E-MAIL_HOST= smtp.gmail.com
-E-MAIL_PORT=587
+E-MAIL_PORT=465
 E-MAIL_USERNAME=itioinnovex@gmail.com
-E-MAIL_PASSWORD=Itio@123
+E-MAIL_PASSWORD=idnlvfdgoxclxxhe
 RESET_TOKEN_SECRET_KEY=8f3d5b9b-a2c4-4b0c-9a9f-f4d0e3b5c6d7
