--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://postgres:root@localhost:5433/fin_api
+DATABASE_URL=postgresql+asyncpg://postgres:root@localhost:5432/Finance_API
 
 EMAIL_HOST= smtp.gmail.com
 EMAIL_PORT=587
