--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.1
 annotated-types==0.6.0
 asyncpg==0.29.0
 base58==2.1.1
+bcrypt==4.1.2
 bitcoin-utils-fork-minimal==0.4.11.6
 blacksheep==2.0.7
 block-io==2.0.6
@@ -22,7 +23,10 @@ idna==3.7
 itsdangerous==2.1.2
 Mako==1.3.3
 MarkupSafe==2.1.3
+marshmallow==3.21.2
 mpmath==1.3.0
+packaging==24.0
+psycopg2==2.9.9
 pycparser==2.21
 pycryptodome==3.20.0
 pydantic==2.5.2
