user delete search update

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost:5432/Finance_API
 
+# SIGNUP_MAIL_URL=localhost:5173/
+SIGNUP_MAIL_URL=https://react-uat.oyefin.com/
+
 EMAIL_HOST= smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USERNAME=itioinnovex@gmail.com
