--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost:5432/Finance_AP
 # SIGNUP_MAIL_URL=localhost:5173/
 SIGNUP_MAIL_URL=https://react-uat.oyefin.com/
 
+CURRENCY_CONVERTER_API=https://currency-conversion-and-exchange-rates.p.rapidapi.com
+RAPID_API_KEY=d68ba047cdmshdb9424e30ff6741p18a7eejsn41ca175d188d
+RAPID_API_HOST=currency-conversion-and-exchange-rates.p.rapidapi.com
+
 EMAIL_HOST= smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USERNAME=itioinnovex@gmail.com
