--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres123@localhost:5432/Finance_AP
 # SIGNUP_MAIL_URL=localhost:5173/
 SIGNUP_MAIL_URL=https://react-uat.oyefin.com/
 
+DEVELOPMENT_URL_MEDIA=http://127.0.0.1:8000/media/
+PRODUCTION_URL_MEDIA=https://python-uat.oyefin.com/media/
+
+IS_DEVELOPMENT=False
+
 
 CURRENCY_CONVERTER_API=https://currency-conversion-and-exchange-rates.p.rapidapi.com
 RAPID_API_KEY=a25c0b2aa8msh4094984ebc185c4p1d5507jsn0ffeabc1a71c
