--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==41.0.7
 ecdsa==0.18.0
 essentials==1.1.5
 essentials-openapi==1.0.9
+fireblocks_sdk==2.13.0
 greenlet==3.0.3
 guardpost==1.0.2
 h11==0.14.0
@@ -37,7 +38,7 @@ pycryptodome==3.20.0
 pydantic==2.5.2
 pydantic-settings==2.2.1
 pydantic_core==2.14.5
-PyJWT==2.6.0
+PyJWT==2.9.0
 pytest==8.3.2
 python-dateutil==2.8.2
 python-decouple==3.8
